package model.api;

public interface IComponent {
    Integer getId();
    String getLibelle();
}
