@startuml

title __ARCHSI_TD_ANGULAR's Class Diagram__\n

  namespace dao {
    class dao.ShopDAO {
    }
  }
  

  namespace dao {
    class dao.ShopDAO {
    }
  }
  

  namespace dao {
    class dao.ShopDAOTest {
    }
  }
  

  namespace dao {
    class dao.ShopDAOTest {
    }
  }
  

  namespace model.api {
    interface model.api.IAdministrator {
    }
  }
  

  namespace model.api {
    interface model.api.IAdministrator {
    }
  }
  

  namespace model.api {
    interface model.api.IComponent {
    }
  }
  

  namespace model.api {
    interface model.api.IComponent {
    }
  }
  

  namespace model.api {
    interface model.api.IComposite {
    }
  }
  

  namespace model.api {
    interface model.api.IComposite {
    }
  }
  

  namespace model.impl {
    class model.impl.Administrator {
    }
  }
  

  namespace model.impl {
    class model.impl.Administrator {
    }
  }
  

  namespace model.impl {
    class model.impl.Article {
    }
  }
  

  namespace model.impl {
    class model.impl.Article {
    }
  }
  

  namespace model.impl {
    class model.impl.Category {
    }
  }
  

  namespace model.impl {
    class model.impl.Category {
    }
  }
  

  namespace model.impl {
    abstract class model.impl.ComponentImpl {
    }
  }
  

  namespace model.impl {
    abstract class model.impl.ComponentImpl {
    }
  }
  

  namespace model.impl {
    class model.impl.Shop {
    }
  }
  

  namespace model.impl {
    class model.impl.Shop {
    }
  }
  

  namespace resources {
    class resources.ArticleResource {
    }
  }
  

  namespace resources {
    class resources.ArticleResource {
    }
  }
  

  namespace resources {
    class resources.ArticlesResource {
    }
  }
  

  namespace resources {
    class resources.ArticlesResource {
    }
  }
  

  namespace resources {
    class resources.ShopResource {
    }
  }
  

  namespace resources {
    class resources.ShopResource {
    }
  }
  

  dao.ShopDAO o-- model.impl.Shop : shopHighTech
  dao.ShopDAO o-- model.impl.Shop : shopHighTech
  model.impl.Article -up-|> model.impl.ComponentImpl
  model.impl.Article o-- model.impl.Category : category
  model.impl.Article -up-|> model.impl.ComponentImpl
  model.impl.Article o-- model.impl.Category : category
  model.impl.Category .up.|> model.api.IComposite
  model.impl.Category -up-|> model.impl.ComponentImpl
  model.impl.Category .up.|> model.api.IComposite<model.impl.Category>
  model.impl.Category -up-|> model.impl.ComponentImpl
  model.impl.ComponentImpl .up.|> model.api.IComponent
  model.impl.ComponentImpl .up.|> model.api.IComponent
  model.impl.Shop -up-|> model.impl.ComponentImpl
  model.impl.Shop -up-|> model.impl.ComponentImpl


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
